# rust-avec-sdl

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/controller/: mod.rs
src/events/: mod.rs
src/game/: mod.rs
src/graphics/: buffer.rs  material.rs  mod.rs  program.rs  renderer.rs  vertex_array.rs
src/graphics/shaders/: mod.rs
src/graphics/textures/: mod.rs
