[package]
name = "rust_avec_sdl"
version = "0.1.0"
authors = ["Christian Hutslar <cjhutslar@att.net>"]
description = "Example game made with Rust, SDL2 and OpenGL"


[lib]
name = "ras"
path = "src/lib.rs"

[[bin]]
name = "rust_avec_sdl"
path = "src/main.rs"

[dependencies]
sdl2 = "0.31"
sdl2-sys = "0.31"
gl = "0.6"
png = "0.12"
image = "*"
nalgebra = "0.16"